tests/baselines/reference/regularExpressionWithNonBMPFlags.errors.txt
regularExpressionWithNonBMPFlags.ts(1,23): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(1,25): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(1,28): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(1,41): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(1,43): error TS1499: Unknown regular expression flag.
regularExpressionWithNonBMPFlags.ts(1,45): error TS1499: Unknown regular expression flag.


==== regularExpressionWithNonBMPFlags.ts (6 errors) ====
    const ğ˜³ğ˜¦ğ˜¨ğ˜¦ğ˜¹ = /(?ğ˜´ğ˜ª-ğ˜®:^ğ˜§ğ˜°ğ˜°.)/ğ˜¨ğ˜®ğ˜¶;
                          ~~
!!! error TS1499: Unknown regular expression flag.
                            ~~
!!! error TS1499: Unknown regular expression flag.
                               ~~
!!! error TS1499: Unknown regular expression flag.
                                            ~~
!!! error TS1499: Unknown regular expression flag.
                                              ~~
!!! error TS1499: Unknown regular expression flag.
                                                ~~
!!! error TS1499: Unknown regular expression flag.
    